# SJTUClaw

./: .env.example  .gitignore  README.md  pyproject.toml
Docs/: DESIGN.md  generalSpec.MD  generalspec-md-task-iterative-newell.md  task01.MD  task1.MD  task2.MD  task3.MD  task4.MD  task5.MD  task6.MD  task7.MD  task8.MD  task9.MD
claw/: __init__.py  agent.py  approval.py  cli.py  cli_commands.py  cli_renderer.py  compaction.py  config.py  context.py  errors.py  events.py  llm.py  logging_config.py  messages.py  paths.py  runtime.py  scheduler.py  session.py  session_coordination.py  session_lifecycle.py  session_title.py  shell.py  tasks.py  tool_execution.py  tool_loop.py  turn_context.py  turn_limits.py  turn_protocol.py  workspace.py
claw/presentation/: __init__.py  timeline.py
claw/prompts/: compaction.md  session_title.md  system_prompt.md
claw/skills/: __init__.py  models.py  registry.py  sources.py  turn.py
claw/store/: __init__.py  tasks.py  (+8 more)
gateway/: __init__.py  __main__.py  app.py  approval_routes.py  chat.py  download_routes.py  memory_routes.py  realtime.py  session_views.py  skill_routes.py  task_routes.py  workspace_routes.py
prompts/: soul.md  system_prompt.md
tests/: test_agent.py  test_attachments.py  test_cli.py  test_cli_commands.py  test_compaction.py  test_config.py  test_context.py  test_events.py  test_gateway.py  test_llm.py  test_logging_config.py  test_memory_store.py  test_memory_tools.py  test_paths.py  test_scheduler.py  test_session.py  test_session_coordination.py  test_session_store.py  test_session_title.py  test_skills.py  test_task_store.py  test_timeline.py  test_tool_descriptions.py  test_tool_executions.py  test_tools.py  test_workspace.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+39 files in other folders)
