[project]
name = "sjtuclaw"
version = "0.1.0"
description = "A minimal agent runtime for the SJTUClaw course project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "filelock>=3.20.3",
    "openai>=2.44.0",
    "prompt-toolkit>=3.0.52",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35",
]

[project.scripts]
claw = "claw.cli:main"
claw-gateway = "gateway.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claw*", "gateway*"]

[tool.setuptools.package-data]
claw = ["prompts/*.md"]
